Fix orientation/status bar issues and update library view modes
- Fix: Prevent forced landscape on app startup by setting requestedOrientation to UNSPECIFIED in MainActivity.
- Fix: Lock landscape orientation specifically when in Frontend mode using LaunchedEffect.
- Fix: Hide status bar by default across all views by updating PrefManager default and forcing UI hide on startup/resume.
- Feature: Added LibraryFrontendPane and AnimatedWavyBackground components.
- UI: Implemented 'Frontend' layout option in Library settings and BottomSheet.
- UI: Refactored LibraryListPane to handle new layout modes and unified account/search headers.
- Refactor: Updated ContainerManager and ContainerUtils to persist DXVK/VKD3D version selections and performance modes.
- Refactor: Enhanced GOG, Epic, and Amazon services with updated installation and metadata checks.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -865,6 +865,7 @@
     <string name="library_layout_list">List</string>
     <string name="library_layout_capsule">Capsule</string>
     <string name="library_layout_hero">Hero</string>
+    <string name="library_layout_frontend">Frontend</string>
     <string name="library_search_placeholder">Search your games…</string>
     <string name="library_search_description">Search</string>
     <string name="library_search_clear">Clear search</string>
